tests/files/flow_controller_tests/should_run/047.cmdr
x = true;
print toString(x);