tests/files/flow_controller_tests/should_fail/097.cmdr
x = true;
print arcsinh(x);